# Unnamed_Project

./: .gitignore  CMakeLists.txt  GenVS2013solutionx64.bat  GenVS2013solutionx86.bat  GenVS2015solutionx64.bat  GenVS2015solutionx86.bat
Unnamed_Cross_Platform_Application_Layer/: CMakeLists.txt
Unnamed_Cross_Platform_Application_Layer/src/: MemoryManager.cpp  Platform.h  Platform.inl  String.cpp  win32_Platform.cpp  win32_Platform.h
Unnamed_Engine_Architecture/: CMakeLists.txt
Unnamed_Engine_Architecture/src/: Engine.cpp  Engine.h
src/: Unix_Source.cpp  win32_Source.cpp
